test_programs/compile_failure/noirc_frontend_tests_overflowing_int_in_for_loop/src/main.nr

    fn main() {
        for _ in -2..-1 {}
    }
    